--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
     
     <main class="max-w-5xl m-auto bg-sky-900"> 
         
-        <section class="w-full h-fit flex flex-col items-center" id="order-section"> <!-- Add Order section -->
+        <section class="w-full h-fit flex flex-col items-center transition-all" id="order-section"> <!-- Add Order section -->
 
             <h2 class="w-full p-2 m-4 mt-8 bg-sky-50 text-center">Welcome user, do you want to add an order?</h2>
 
@@ -44,7 +44,7 @@
               <button id="clear-wallet" class="w-32 h-8 bg-sky-50 hover:bg-sky-200 active:bg-sky-300 text-sm hover:font-semibold hover:tracking-wider rounded-2xl cursor-pointer transition-all mb-4 shadow-md shadow-sky-200 active:shadow-sky-600 hover:shadow-sky-900">Clear wallet</button>
             </div>            
 
-            <form id="order-form" class="hidden h-fit w-96 bg-sky-100 grid-cols-2 grid-rows-7 gap-2 p-4 mb-4 rounded-2xl *:w-full *:h-full *:text-xs *:m-auto  *:outline-none *:border-1 *:focus:border-2 *:rounded-sm *:text-center transition-all relative">
+            <form id="order-form" class="hidden h-fit w-96 bg-sky-100 grid-cols-2 grid-rows-7 gap-2 p-4 mb-4 rounded-2xl *:w-full *:h-full *:text-xs *:m-auto  *:outline-none *:border-1 *:focus:border-2 *:rounded-sm *:text-center absolute opacity-0 transition-all">
 
                 <select name="order-type" id="order-type" class="focus:bg-sky-50">
                     <option disabled selected="true">Select an operation</option>
