--- a/home.html
+++ b/home.html
@@ -38,13 +38,13 @@
 
             <h2 class="w-full p-2 m-4 mt-8 bg-sky-50 text-center">Welcome user, do you want to add an order?</h2>
 
-            <div class="w-1/2 flex justify-around">
+            <div class="w-3/4 sm:w-1/2 flex justify-around">
               <button id="add-order" class="w-32 h-8 bg-sky-50 hover:bg-sky-200 active:bg-sky-300 text-sm hover:font-semibold hover:tracking-wider rounded-2xl cursor-pointer transition-all mb-4 shadow-md shadow-sky-200 active:shadow-sky-600 hover:shadow-sky-900">Add order</button>
 
               <button id="clear-wallet" class="w-32 h-8 bg-sky-50 hover:bg-sky-200 active:bg-sky-300 text-sm hover:font-semibold hover:tracking-wider rounded-2xl cursor-pointer transition-all mb-4 shadow-md shadow-sky-200 active:shadow-sky-600 hover:shadow-sky-900">Clear wallet</button>
             </div>            
 
-            <form id="order-form" class="hidden h-fit w-96 bg-sky-100 grid-cols-2 grid-rows-7 gap-2 p-4 mb-4 rounded-2xl *:w-full *:h-full *:text-xs *:m-auto  *:outline-none *:border-1 *:focus:border-2 *:rounded-sm *:text-center absolute opacity-0 transition-all">
+            <form id="order-form" class="hidden h-fit w-96 bg-sky-300 grid-cols-2 grid-rows-7 gap-2 p-4 mb-4 rounded-2xl *:w-full *:h-full *:text-xs *:m-auto  *:outline-none *:border-1 *:focus:border-2 *:rounded-sm *:text-center absolute opacity-0 transition-all">
 
                 <select name="order-type" id="order-type" class="focus:bg-sky-50">
                     <option disabled selected="true">Select an operation</option>
