--- a/src/html/wallet.html
+++ b/src/html/wallet.html
@@ -92,8 +92,43 @@
 
       <section class="w-full h-fit flex flex-col lg:items-center bg-sky-50 p-2 "> <!-- Wallet section -->
           
-            <div class="h-8 w-full bg-sky-800 text-sky-50 rounded-t-lg">
-              <p class="h-full flex items-center justify-center text-lg font-semibold tracking-widest">WALLET <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-list-filter ml-2"><path d="M3 6h18"/><path d="M7 12h10"/><path d="M10 18h4"/></svg></p>
+            <div class="h-8 w-full flex justify-center items-center bg-sky-800 text-sky-50 rounded-t-lg relative">
+              <p class="h-full flex items-center justify-center text-lg font-semibold tracking-widest">WALLET </p>
+
+              <button class="h-full relative" id="filter-wallet">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-list-filter ml-2 cursor-pointer peer"><path d="M3 6h18"/><path d="M7 12h10"/><path d="M10 18h4"/></svg>
+
+                <section class="w-40 bg-sky-500 absolute left-full top-0 text-center hidden peer-hover:block hover:block transition-all"> <!-- Filter Wallet -->
+                  <ul class="*:hover:bg-sky-600 *:w-full *:py-1 cursor-pointer">
+
+                    <li id="filter-less" class="group">Lesser to greater
+                      <ul class="hidden group-hover:flex w-32 flex-col absolute bg-sky-500 top-0 left-full *:hover:bg-sky-600 *:py-1">
+                        <li>Ticker</li>
+                        <li>Name</li>
+                        <li>Category</li>
+                        <li>Total Cost</li>
+                        <li>Actual Value</li>
+                        <li>P / L</li>
+                        <li>P / L %</li>
+                      </ul>
+                    </li>
+
+                    <li id="filter-greater" class="group">Greater to lesser
+                      <ul class="hidden group-hover:flex w-32 flex-col absolute bg-sky-500 top-0 left-full *:hover:bg-sky-600 *:py-1">
+                        <li>Ticker</li>
+                        <li>Name</li>
+                        <li>Category</li>
+                        <li>Total Cost</li>
+                        <li>Actual Value</li>
+                        <li>P / L</li>
+                        <li>P / L %</li>
+                      </ul>
+                    </li>
+                    
+                  </ul>
+                </section>
+
+              </button>
             </div>
 
           <div class="w-full overflow-x-auto rounded-b-lg">
