Redesign orders.html + add some shadows

--- a/home.html
+++ b/home.html
@@ -6,8 +6,7 @@
     <title>Home</title>
     <link href="src/css/output.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/assets/logo/ico.png">
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
 <body class="h-screen w-full bg-sky-900 text-black">
