--- a/src/html/wallet.html
+++ b/src/html/wallet.html
@@ -6,8 +6,7 @@
     <title>Wallet</title>
     <link href="/src/css/output.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/assets/logo/ico.png">
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
 <body class="min-h-dvh h-full w-full bg-sky-900 grid grid-rows-[auto_1fr_auto] ">
@@ -92,7 +91,7 @@
 
       <section class="w-full h-fit flex flex-col lg:items-center bg-sky-50 p-2 "> <!-- Wallet section -->
           
-            <div class="h-8 w-full flex justify-center items-center bg-sky-800 text-sky-50 rounded-t-lg relative">
+            <div class="h-8 w-full flex justify-center items-center bg-sky-800 text-sky-50 rounded-t-lg relative ">
               <p class="h-full flex items-center justify-center text-lg font-semibold tracking-widest">WALLET </p>
 
               <button class="h-full relative" id="filter-wallet">
@@ -131,7 +130,7 @@
               </button>
             </div>
 
-          <div class="w-full overflow-x-auto rounded-b-lg">
+          <div class="w-full overflow-x-auto rounded-b-lg hover:shadow-lg transition-all">
             <table id="wallet-table" class="w-full h-fit text-xs sm:text-sm text-center *:sm:text-nowrap *:transition-all whitespace-nowrap"> <!-- Wallet table -->
                 <thead class="bg-sky-950 text-sky-50 *:text-sm *:tracking-wide">
                   <tr class="*:w-fit *:h-16 *:m-auto *:py-2 *:px-2 *:font-medium">
@@ -151,7 +150,7 @@
             </table>
           </div>
 
-            <div class="w-full h-72 bg-amber-300 my-2 rounded-lg">
+            <div class="w-full h-72 bg-amber-300 my-2 rounded-lg hover:shadow-lg transition-all">
               HERE WE WANT A GRAPH WITH EVERY Category invest and her %
             </div>
              
