--- a/src/html/wallet.html
+++ b/src/html/wallet.html
@@ -70,7 +70,7 @@
             </div>
         </form>
 
-        <form id="new-currencie-form" class="hidden h-fit w-fit bg-red-100 grid-cols-2 grid-rows-7 gap-2 p-4 mb-4 rounded-2xl *:w-full *:m-auto  *:outline-none  *:focus:border-2 transition-all absolute top-72"> <!-- New Currencie modal -->
+        <form id="new-currencie-form" class="hidden h-fit w-fit bg-red-100 grid-cols-2 grid-rows-7 gap-2 p-4 mb-4 rounded-2xl *:w-full *:m-auto  *:outline-none  *:focus:border-2 transition-all absolute top-72 z-10"> <!-- New Currencie modal -->
           <p class="w-full text-xs text-center pb-2">Add new Currencie</p>
           <div class="w-fit h-fit flex items-center *:text-center *:rounded-sm text-xs">
             <input name="new-currencie-name" id="new-currencie-name" type="text" placeholder="Name" maxlength="20" class="h-8 border-1 bg-amber-100 focus:bg-amber-200" >
