Edit filter in OrderPage

--- a/src/html/orders.html
+++ b/src/html/orders.html
@@ -107,6 +107,8 @@
                       <li>Category</li>
                       <li>Unit Price</li>
                       <li>Total</li>
+                      <li>Cost</li>
+                      <li>P / L</li>
                     </ul>
                   </li>
 
@@ -117,6 +119,8 @@
                       <li>Category</li>
                       <li>Unit Price</li>
                       <li>Total</li>
+                      <li>Cost</li>
+                      <li>P / L</li>
                     </ul>
                   </li>
                   
