Finish Home Page Chart-s

--- a/home.html
+++ b/home.html
@@ -223,8 +223,8 @@
     </footer>
 
     <script type="module" src="index.js"></script>
-    <script type="module" src="/src/components/charts/Charts.js"></script>
-    <script type="module" src="/src/components/charts/Charts1.js"></script>
+    <!-- <script type="module" src="/src/components/HomePageCharts.js"></script> -->
+    <!-- <script type="module" src="/src/components/charts/Charts1.js"></script> -->
 
 </body>
 </html>
