Finish Home, Wallet and Orders pages

--- a/home.html
+++ b/home.html
@@ -162,8 +162,8 @@
                     <th>Units</th>
                     <th class="hidden sm:table-cell">Total Cost</th>
                     <th>Actual Value</th>
-                    <th class="hidden sm:table-cell">Profit</th>
-                    <th>Profit %</th>
+                    <th class="hidden sm:table-cell">Profit ($)</th>
+                    <th>Profit (%)</th>
                   </tr>
                 </thead>
                 <tbody class="bg-sky-100 *:even:bg-sky-50 divide-y divide-sky-950 *:hover:bg-sky-200 font-light *:transition-all"></tbody>
@@ -223,8 +223,6 @@
     </footer>
 
     <script type="module" src="index.js"></script>
-    <!-- <script type="module" src="/src/components/HomePageCharts.js"></script> -->
-    <!-- <script type="module" src="/src/components/charts/Charts1.js"></script> -->
 
 </body>
 </html>
