--- a/src/html/orders.html
+++ b/src/html/orders.html
@@ -155,7 +155,7 @@
 
           <p class="w-full h-10 flex justify-center items-center bg-sky-800 text-sky-50 rounded-t-lg">SELL ORDERS</p>
 
-          <div class="w-full overflow-x-auto rounded-b-lg mb-4 hover:shadow-lg transition-all"> <!-- Orders buy table -->
+          <div class="w-full overflow-x-auto rounded-b-lg mb-4 hover:shadow-lg transition-all"> <!-- Orders sell table -->
             <table id="orders-sell-table" class="w-full h-fit text-xs sm:text-sm text-center *:sm:text-nowrap *:transition-all whitespace-nowrap"> <!-- Orders sell table -->
               
                 <thead class="bg-sky-950 text-sky-50 *:text-sm *:tracking-wide">
@@ -181,7 +181,7 @@
             <div class="w-full md:h-96 h-72 relative flex justify-center rounded-lg hover:shadow-lg transition-all">
                <canvas class="w-full " id="transaction-volume-chart"></canvas>
              </div>
-             <div class="relative md:h-96 h-72 flex justify-center rounded-lg hover:shadow-lg transition-all mt-2 md:mt-0" >
+             <div class="w-full relative md:h-96 h-72 flex justify-center rounded-lg hover:shadow-lg transition-all mt-2 md:mt-0" >
                <canvas class="w-full " id="profit-line-chart"></canvas>
              </div>
          </div>
@@ -204,7 +204,6 @@
         </nav>
       </div>
       
-
       <p class="text-xs">Project designed and developed by <a href="https://github.com/EmiLeale" target="_blank">Emiliano Leale</a></p>
     </footer>
 
